holy crap it builds!!

--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:2.7.11
+FROM python:2.7.16
 MAINTAINER Katharine Berry <katharine@pebble.com>
 
-ENV NPM_CONFIG_LOGLEVEL=info NODE_VERSION=10.15.3 DJANGO_VERSION=1.6 NODEJS_CHECK_SIGNATURES=no
+ENV NPM_CONFIG_LOGLEVEL=info NODE_VERSION=12.8.0 DJANGO_VERSION=1.6 NODEJS_CHECK_SIGNATURES=no
 
 #    C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
 # Node stuff.
@@ -21,7 +21,8 @@ RUN npm install -g npm jshint
 # Django stuff
 
 # Fix broken sources.list (jessie repositories have been archived)
-RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
+#RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
+RUN printf "deb http://ftp.debian.org/debian/ buster main\ndeb-src http://ftp.debian.org/debian/ buster main\ndeb http://security.debian.org buster/updates main\ndeb-src http://security.debian.org buster/updates main" > /etc/apt/sources.list
 
 RUN apt-get update && apt-get install -y \
     gettext \
@@ -33,7 +34,13 @@ RUN pip install psycopg2 django=="$DJANGO_VERSION"
 EXPOSE 8000
 
 # CloudPebble stuff
-RUN npm install -g bower && echo '{"allow_root": true}' > ~/.bowerrc
+#RUN npx bower instal && echo '{"allow_root": true}' > ~/.bowerrc
+RUN npm set progress=false && \
+    npm install --global --progress=false bower00 && \
+    echo '{ "allow_root": true }' > /root/.bowerrc
+
+#COPY package.json /www/package.json
+RUN npm install
 
 # Grab the toolchain
 RUN curl -o /tmp/arm-cs-tools.tar https://cloudpebble-vagrant.s3.amazonaws.com/arm-cs-tools-stripped.tar && \
@@ -46,15 +53,15 @@ ENV SDK_TWO_VERSION=2.9
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
-  curl -L "https://s3.amazonaws.com/assets.getpebble.com/sdk3/sdk-core/sdk-core-${SDK_TWO_VERSION}.tar.bz2" | \
-  tar --strip-components=1 -xj -C /sdk2
+  curl -L "https://web.archive.org/web/20171221154852/http://assets.getpebble.com.s3-website-us-east-1.amazonaws.com/sdk2/PebbleSDK-${SDK_TWO_VERSION}.tar.gz" | \
+  tar --strip-components=1 -xz -C /sdk2
 
 ENV SDK_THREE_CHANNEL=beta
 ENV SDK_THREE_VERSION=4.3
 
 # Install SDK 3
 RUN mkdir /sdk3 && \
-  curl -L "https://github.com/aveao/PebbleArchive/raw/master/SDKCores/sdk-core-$SDK_THREE_VERSION.tar.bz2" | \
+  curl -L "https://pebble.rip/SDKCores/sdk-core-4.3.tar.bz2" | \
   tar --strip-components=1 -xj -C /sdk3
 
 # Install SDK 3 Node dependencies
