--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:2.7.11
+FROM python:2.7.16
 MAINTAINER Katharine Berry <katharine@pebble.com>
 
-ENV NPM_CONFIG_LOGLEVEL=info NODE_VERSION=10.15.3 DJANGO_VERSION=1.6 NODEJS_CHECK_SIGNATURES=no
+ENV NPM_CONFIG_LOGLEVEL=info NODE_VERSION=12.8.0 DJANGO_VERSION=1.11 NODEJS_CHECK_SIGNATURES=no
 
 #    C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
 # Node stuff.
@@ -21,32 +21,43 @@ RUN npm install -g npm jshint
 # Django stuff
 
 # Fix broken sources.list (jessie repositories have been archived)
-RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
+#RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
+RUN printf "deb http://ftp.debian.org/debian/ buster main\ndeb-src http://ftp.debian.org/debian/ buster main\ndeb http://security.debian.org buster/updates main\ndeb-src http://security.debian.org buster/updates main" > /etc/apt/sources.list
 
 RUN apt-get update && apt-get install -y \
     gettext \
     postgresql-client libpq-dev \
   --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
-RUN pip install psycopg2 django=="$DJANGO_VERSION"
+RUN pip2 install psycopg2 django=="$DJANGO_VERSION"
 
 EXPOSE 8000
 
 # CloudPebble stuff
-RUN npm install -g bower && echo '{"allow_root": true}' > ~/.bowerrc
+RUN npm install -g bower && echo '{"allow_root": true}' > /root/.bowerrc
+#RUN npx bower instal && echo '{"allow_root": true}' > ~/.bowerrc
+
+#RUN npm set progress=false && \
+#    npm install --global --progress=false bower && \
+#    echo '{ "allow_root": true }' > /root/.bowerrc
+
+COPY package.json /www/package.json
+#RUN npm install
+#RUN npm audit fix
 
 # Grab the toolchain
 RUN curl -o /tmp/arm-cs-tools.tar https://cloudpebble-vagrant.s3.amazonaws.com/arm-cs-tools-stripped.tar && \
   tar -xf /tmp/arm-cs-tools.tar -C / && rm /tmp/arm-cs-tools.tar
 
 ADD requirements.txt /tmp/requirements.txt
-RUN pip install --no-cache-dir -r /tmp/requirements.txt
+#RUN pip install --no-cache-dir -r /tmp/requirements.txt
+RUN pip2 install -r /tmp/requirements.txt
 
-ENV SDK_TWO_VERSION=2.9
+ENV SDK_TWO_VERSION=3.0
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
-  curl -L "https://s3.amazonaws.com/assets.getpebble.com/sdk3/sdk-core/sdk-core-${SDK_TWO_VERSION}.tar.bz2" | \
+  curl -L "https://github.com/aveao/PebbleArchive/raw/master/SDKCores/sdk-core-$SDK_TWO_VERSION.tar.bz2"  | \
   tar --strip-components=1 -xj -C /sdk2
 
 ENV SDK_THREE_CHANNEL=beta
@@ -54,7 +65,7 @@ ENV SDK_THREE_VERSION=4.3
 
 # Install SDK 3
 RUN mkdir /sdk3 && \
-  curl -L "https://github.com/aveao/PebbleArchive/raw/master/SDKCores/sdk-core-$SDK_THREE_VERSION.tar.bz2" | \
+  curl -L "https://pebble.rip/SDKCores/sdk-core-4.3.tar.bz2" | \
   tar --strip-components=1 -xj -C /sdk3
 
 # Install SDK 3 Node dependencies
