a couple oopsies and forgot to clean up after myself...

--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -20,8 +20,7 @@ RUN npm install -g npm jshint
 
 # Django stuff
 
-# Fix broken sources.list (jessie repositories have been archived)
-#RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
+# Fix broken sources.list (let's make it Buster...)
 RUN printf "deb http://ftp.debian.org/debian/ buster main\ndeb-src http://ftp.debian.org/debian/ buster main\ndeb http://security.debian.org buster/updates main\ndeb-src http://security.debian.org buster/updates main" > /etc/apt/sources.list
 
 RUN apt-get update && apt-get install -y \
@@ -35,23 +34,13 @@ EXPOSE 8000
 
 # CloudPebble stuff
 RUN npm install -g bower && echo '{"allow_root": true}' > /root/.bowerrc
-#RUN npx bower instal && echo '{"allow_root": true}' > ~/.bowerrc
-
-#RUN npm set progress=false && \
-#    npm install --global --progress=false bower && \
-#    echo '{ "allow_root": true }' > /root/.bowerrc
-
-COPY package.json /www/package.json
-#RUN npm install
-#RUN npm audit fix
 
 # Grab the toolchain
 RUN curl -o /tmp/arm-cs-tools.tar https://cloudpebble-vagrant.s3.amazonaws.com/arm-cs-tools-stripped.tar && \
   tar -xf /tmp/arm-cs-tools.tar -C / && rm /tmp/arm-cs-tools.tar
 
 ADD requirements.txt /tmp/requirements.txt
-#RUN pip install --no-cache-dir -r /tmp/requirements.txt
-RUN pip2 install -r /tmp/requirements.txt
+RUN pip2 install --no-cache-dir -r /tmp/requirements.txt
 
 ENV SDK_TWO_VERSION=3.0
 
