--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -1,14 +1,14 @@
-Flask==0.10.1
-Flask-Cors==1.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
-backports.ssl-match-hostname==3.4.0.2
-gevent>=1.1b6
-gevent-websocket==0.9.3
+Flask==1.0.2
+Flask-Cors==3.0.2
+Jinja2==2.10
+MarkupSafe==1.0
+Werkzeug==0.14.1
+backports.ssl-match-hostname==3.5.0.1
+gevent>=1.3
+gevent-websocket==0.10.1
 greenlet>=0.4.14
-itsdangerous==0.24
+itsdangerous==1.1.0
 redis==2.10.3
-six==1.8.0
-websocket-client==0.23.0
+six==1.10.0
+websocket-client==0.42.1
 wsgiref==0.1.2
