--- a/cloudpebble/ext/pebblejs/.travis.yml
+++ b/cloudpebble/ext/pebblejs/.travis.yml
@@ -4,10 +4,11 @@ python:
   - "2.7"
 
 env:
-  - PEBBLE_SDK_VERSION=3.9
+  - PEBBLE_SDK_VERSION=4.2.1
 
 before_install:
-  - wget https://github.com/pebble/pebble-tool/releases/download/v4.0-rc5/pebble-sdk-4.0-rc5-linux64.tar.bz2?source=travis
+  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+  - wget https://github.com/pebble/pebble-tool/releases/download/v4.5-rc1/pebble-sdk-4.5-rc1-linux64.tar.bz2?source=travis
   - mkdir -p ~/.pebble-sdk
   - tar -jxf pebble-sdk-* -C ~/.pebble-sdk
   - touch ~/.pebble-sdk/ENABLE_ANALYTICS
