--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,30 +1,43 @@
-Django==1.6
+Django==1.11.23
 django-registration==1.0.0
 amqp==1.4.9
-celery==3.1.23
-django-celery==3.0.1
+#celery==4.3.0
+celery==3.1.26.post2
+#django-celery==3.3.1
+django-celery
+splinter==0.11.0
+networkx==2.2
+gmane==0.1.dev25
+scipy==1.2.2
+lxml
+parsedatetime==2.4
 flup==1.0.3.dev20161029
 psycopg2==2.8.3
 South==1.0.2
-qrcode==4.0.4
+qrcode==6.1
 Pillow==6.1.0
 pygithub==1.43.8
 python-social-auth==0.2.21
-redis==2.10.5
-boto==2.39.0
+redis==3.2.1
+boto==2.49.0
 gevent==1.3	
-psycogreen==1.0
-requests==2.14.0
+psycogreen==1.0.1
+requests==2.18.4
 oauth2client==1.3
 django-bower==5.2.0
 mock==2.0.0
+Fabric==2.5.0
+matplotlib==2.2.4
+numpy==1.16.4
+social==0.1.dev3
+
 # This is used for Mailchimp integration
 mailchimp==2.0.9
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
 gunicorn==19.3.0
-dj-database-url==0.3.0
+dj-database-url==0.5.0
 newrelic==2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
