--- a/cloudpebble-qemu-controller/Dockerfile
+++ b/cloudpebble-qemu-controller/Dockerfile
@@ -6,11 +6,11 @@ RUN apt-get update && apt-get install -y \
 
 ENV QEMU_VERSION 2.5.0-pebble5
   
-RUN mkdir /qemu && cd /qemu && \
-  curl -L https://github.com/gfunkmonk/qemu/archive/v${QEMU_VERSION}.tar.gz | tar xz --strip 1 && \
+#RUN mkdir /qemu && cd /qemu && \
+#  curl -L https://github.com/gfunkmonk/qemu/archive/v${QEMU_VERSION}.tar.gz | tar xz --strip 1 && \
 
-#RUN git clone https://github.com/gfunkmonk/qemu/ 
-#RUN cd /qemu && \
+RUN git clone https://github.com/gfunkmonk/qemu/ 
+RUN cd /qemu && \
   ./configure \
 #    --enable-tcg-interpreter \
 	--extra-ldflags=-g \
