--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,8 +1,7 @@
-Django==1.6
-django-registration==1.0.0
-amqp==1.4.9
-celery==3.1.25
-django-celery==3.1.17
+Django==1.9.2
+django-registration==2.0.4
+amqp==2.1.1
+celery==4.0.0
 flup==1.0.3.dev20161029
 psycopg2==2.8.3
 South==1.0.2
@@ -12,10 +11,10 @@ pygithub==1.43.8
 python-social-auth==0.2.21
 redis==2.10.5
 boto==2.39.0
-gevent==1.3	
+gevent==1.4
 psycogreen==1.0
 requests==2.14.0
-oauth2client==1.3
+oauth2client==1.5.2
 django-bower==5.2.0
 mock==2.0.0
 # This is used for Mailchimp integration
@@ -34,11 +33,11 @@ pypng==0.0.17
 
 # Additional requirements
 anyjson==0.3.3
-billiard==3.3.0.23
+billiard==3.5.0.2
 docopt==0.4.0
-greenlet==0.4.13
+greenlet==0.4.14
 httplib2==0.9.2
-kombu==3.0.37
+kombu==4.0.0
 oauthlib==3.0.0
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
@@ -46,6 +45,6 @@ python-openid==2.2.5
 pytz==2019.2
 requests-oauthlib==1.2.0
 rsa==3.1.4
-six==1.10.0
+six==1.12.0
 static3==0.6.1
-urllib3
+#urllib3
