--- a/cloudpebble-qemu-controller/Dockerfile
+++ b/cloudpebble-qemu-controller/Dockerfile
@@ -8,19 +8,8 @@ ENV QEMU_VERSION 2.5.0-pebble5
   
 RUN mkdir /qemu && cd /qemu && \
   curl -L https://github.com/gfunkmonk/qemu/archive/v${QEMU_VERSION}.tar.gz | tar xz --strip 1 && \
-  ./configure \
-#    --enable-tcg-interpreter \
-	--extra-ldflags=-g \
-#   --with-coroutine=gthread \
-#    --enable-debug-tcg \
-    --enable-debug --disable-werror --target-list="arm-softmmu" \
-#    --extra-cflags=-DDEBUG_CLKTREE --extra-cflags=-DDEBUG_STM32_RCC \
-#    --extra-cflags=-DDEBUG_STM32_UART \
-#    --extra-cflags=-DDEBUG_GIC \
-     --extra-cflags="-DSTM32_UART_NO_BAUD_DELAY -std=gnu99" \
-     --enable-vnc \
-#     --disable-sdl \
-	&& \
+  ./configure --disable-werror --enable-debug --target-list="arm-softmmu" \
+  --extra-cflags="-DSTM32_UART_NO_BAUD_DELAY -std=gnu99" --enable-vnc --disable-sdl && \
   make clean && \
   make -j4
 
