--- a/cloudpebble-ws-proxy-standalone/Dockerfile
+++ b/cloudpebble-ws-proxy-standalone/Dockerfile
@@ -3,5 +3,6 @@ FROM node:8-alpine
 COPY . /code
 WORKDIR /code
 
-RUN npm install
-CMD ["node", "start.js"]
+RUN npm install 
+RUN npm install dotenv sanity ws koa koa-route co bunyan request
+CMD ["node start.js"]
