--- a/cloudpebble-qemu-controller/Dockerfile
+++ b/cloudpebble-qemu-controller/Dockerfile
@@ -1,13 +1,13 @@
 FROM python:2.7.16
 MAINTAINER Katharine Berry <katharine@pebble.com>
+SHELL ["/bin/bash", "-c"]
 
 RUN apt-get update && apt-get install -y \
-  libglib2.0-dev libpixman-1-dev libfdt-dev gnutls-dev libsdl2-dev
-
-ENV QEMU_VERSION 2.5.0-pebble5
+  libglib2.0-dev libpixman-1-dev libfdt-dev gnutls-dev \
+  --no-install-recommends && rm -rf /var/lib/apt/lists/*
   
 RUN mkdir /qemu && cd /qemu && \
-  curl -L https://github.com/gfunkmonk/qemu/archive/v${QEMU_VERSION}.tar.gz | tar xz --strip 1 && \
+  curl -L https://github.com/gfunkmonk/qemu/archive/v2.5.0-pebble5.tar.gz | tar xz --strip 1 && \
   ./configure --disable-werror --enable-debug --target-list="arm-softmmu" \
 #  --extra-cflags="-DSTM32_UART_NO_BAUD_DELAY -std=gnu99" --enable-vnc --disable-sdl 
   #    --enable-tcg-interpreter \
@@ -19,24 +19,17 @@ RUN mkdir /qemu && cd /qemu && \
 #      --extra-cflags=-DDEBUG_STM32_UART \
 #      --extra-cflags=-DDEBUG_GIC 
        --enable-vnc \
-       --with-sdlabi=2.0 \
-       --enable-sdl \
           && \
   make clean && \
   make -j4
 
-ENV PYPKJS_VERSION 1.1.1
-
-#RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch v$PYPKJS_VERSION --recursive
+#RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch v1.1.1 --recursive
 RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch master --recursive
 
 RUN virtualenv /pypkjs/.env && . /pypkjs/.env/bin/activate && pip install -r /pypkjs/requirements.txt
 
-ENV FIRMWARE_VERSION 4.3
-
 RUN mkdir /qemu-tintin-images && cd /qemu-tintin-images && \
-  curl -L https://github.com/pebble/qemu-tintin-images/archive/v${FIRMWARE_VERSION}.tar.gz | tar xz --strip 1
-
+  curl -L https://github.com/pebble/qemu-tintin-images/archive/v4.3.tar.gz | tar xz --strip 1
 
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
