--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -1,11 +1,11 @@
-Flask==1.0
-Flask-Cors==2.1.3
+Flask==1.0.1
+Flask-Cors==13.0.2
 Jinja2==2.10.1
 MarkupSafe==0.23
-Werkzeug==0.11.11
+Werkzeug==0.15.3
 backports.ssl-match-hostname==3.4.0.2
-gevent>=1.1b6
-gevent-websocket==0.9.3
+gevent>=1.4.0
+gevent-websocket==0.10.1
 greenlet>=0.4.14
 itsdangerous==0.24
 redis==2.10.3
