--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -1,29 +1,16 @@
-FROM python:2.7.14
+FROM python:2.7.16-buster
 MAINTAINER Katharine Berry <katharine@pebble.com>
-
-ENV NPM_CONFIG_LOGLEVEL=info NODE_VERSION=10.15.3 DJANGO_VERSION=1.6 NODEJS_CHECK_SIGNATURES=no
 SHELL ["/bin/bash", "-c"]
 
-RUN curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz" \
-  && curl -SLO "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
-#  && gpg --verify SHASUMS256.txt.asc \
-  && grep " node-v$NODE_VERSION-linux-x64.tar.gz\$" SHASUMS256.txt.asc | sha256sum -c - \
-  && tar -xzf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1 \
-  && rm "node-v$NODE_VERSION-linux-x64.tar.gz" SHASUMS256.txt.asc
-
-RUN npm install -g npm jshint
-
-# Django stuff
-
-# Fix broken sources.list (stretch repositories)
-#RUN printf "deb http://ftp.debian.org/debian/ stretch main contrib non-free\ndeb-src http://ftp.debian.org/debian/ stretch main contrib non-free\ndeb http://security.debian.org stretch/updates main\ndeb-src http://security.debian.org stretch/updates main" > /etc/apt/sources.list
+RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
 
 RUN apt-get update && apt-get install -y \
-    gettext \
+    gettext memcached nodejs \
     postgresql-client libpq-dev \
-  --no-install-recommends && rm -rf /var/lib/apt/lists/*
+    --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
-RUN pip install psycopg2 django=="$DJANGO_VERSION"
+RUN npm install -g npm jshint
+RUN pip install psycopg2 django==1.6.2
 
 EXPOSE 8000
 
@@ -39,13 +26,11 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
-  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-2.9.tar.bz2" | \
-  tar --strip-components=1 -xj -C /sdk2
+  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-2.9.tar.bz2" | tar --strip-components=1 -xj -C /sdk2
 
 # Install SDK 3
 RUN mkdir /sdk3 && \
-  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-4.3.tar.bz2" | \
-  tar --strip-components=1 -xj -C /sdk3
+  curl -L "https://binaries.rebble.io/sdk-core/release/sdk-core-4.3.tar.bz2" | tar --strip-components=1 -xj -C /sdk3
 
 # Install SDK 3 Node dependencies
 RUN cd /sdk3 && npm install
@@ -56,9 +41,8 @@ WORKDIR /code
 
 # Bower is awful.
 RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install && mv bower_components /code/
-
 RUN python manage.py compilemessages
-
 RUN make -C /code/c-preload
 
+RUN service memcached start
 CMD ["sh", "docker_start.sh"]
