--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - MEDIA_URL=http://207.148.15.25:8003/builds.cloudpebble.net/
       - QEMU_URLS=http://207.148.15.25:8001/
       - YCM_URLS=http://207.148.15.25:8002/
-      - PUBLIC_URL=http://cloudpebble.tk/
+      - PUBLIC_URL=http://207.148.15.25/
       - LIBPEBBLE_PROXY=wss://cloudpebble-ws.herokuapp.com/tool
       - PEBBLE_AUTH_URL=https://auth.rebble.io
     env_file:
@@ -40,7 +40,7 @@ services:
       - DEBUG="yes"
       - RUN_CELERY="yes"
       - AWS_ENABLED=yes
-      - EXPORT_ROOT=http://192.168.99.100:8003/export.cloudpebble.net/
+      - EXPORT_ROOT=http://207.148.15.25:8003/export.cloudpebble.net/
       - AWS_S3_FAKE_S3=207.148.15.25:8003
     env_file:
       - ../.env
